# Coding-Agent-

./: .gitignore  Dockerfile  README.md  SDLC_REPORT.md  docker-compose.yml  pyproject.toml  setup_demo_issue.py
.github/workflows/: agent.yml  sdlc_pipeline.yml
src/: event.json
src/code_agent/: __init__.py  cli.py  main.py  service.py
src/reviewer_agent/: __init__.py  cli.py  main.py  service.py
src/shared/: diff_manager.py  llm.py  utils.py
tests/: conftest.py  test_code_agent_service.py  test_diff_manager.py  test_utils.py
tests/evaluation/: benchmark.py  run_benchmark.py  tasks.py
